# expositor

./: Cargo.toml  build  build-release  build.bat  build.rs  extensions  extensions.md  readme.md
256x16-lt10/: default.nnue
fathom/: LICENSE  README.md
fathom/src/: inline-wrapper.c  stdendian.h  tbchess.c  tbconfig.h  tbprobe.c  tbprobe.h
net/: default.nnue
nnue/: default.nnue
src/: algebraic.rs  apply.rs  basis.rs  cache.rs  color.rs  constants.rs  context.rs  conv.rs  datagen.rs  default.kdnn  default.nnue  default.rs  dest.rs  endgame.rs  exchange.rs  fen.rs  formats.rs  global.rs  hce.rs  import.rs  limits.rs  main.rs  misc.rs  movegen.rs  movesel.rs  movetype.rs  nnext.rs  nnue.rs  nonsense.rs  pair.rs  perft.rs  piece.rs  policy.rs  proof.rs  quant.rs  quick.rs  rand.rs  regress.rs  resolve.rs  score.rs  (+15 more)
