[package]
name = "expositor"
version = "2.0.0"
authors = ["Korawend <expositor@fastmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
