[package]
name = "expositor"
version = "2.0.0"
authors = ["Kade <helo@expositor.dev>"]
edition = "2021"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
# panic = "abort"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
# panic = "abort"
